# lisp-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  numerical_integration.rs
src/math/: complex.rs  core.rs  fft.rs  field.rs  integrate.rs  matrix.rs
src/math_module/: core.rs  integrate.rs  numerical_integration.rs  numerical_integration_second_order.rs  vector.rs
src/physics/: constants.rs  gravity.rs  harmonic_oscillator.rs  particle.rs
src/physics_module/: harmonic_oscillator.rs  particle.rs
src/utils/: mod.rs  plot.rs
